[tool.poetry]
name = "calico"
version = "1.0"
description = "I/O checker for command line programs."
authors = ["H. Turgut Uyar <uyar@itu.edu.tr>"]
license = "GPL-3.0+"
readme = "README.rst"
homepage = "https://github.com/itublg/calico"
repository = "https://github.com/itublg/calico"
documentation = "https://gitlab.com/itublg/calico"
keywords = ["testing", "i/o"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
    "Topic :: Education :: Testing",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"
pexpect = "^4.6"
"ruamel.yaml" = "^0.15.41"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
pytest-cov = "^2.5"
black = "^18.3-alpha.0"
flake8 = "^3.5"
flake8-isort = "^2.5"
flake8-docstrings = "^1.3"
pygenstub = "^1.1"
sphinx = "^1.7"
sphinx_rtd_theme = "^0.4.0"
