[tool.poetry]
name = "calico"
version = "1.1.1"
description = "I/O checker for command line programs."
readme = "README.rst"

authors = ["H. Turgut Uyar <uyar@itu.edu.tr>"]
license = "GPL-3.0+"

homepage = "https://github.com/itublg/calico"
documentation = "https://gitlab.com/itublg/calico"
repository = "https://github.com/itublg/calico"

keywords = ["testing", "i/o"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 2.7",
    "Topic :: Education :: Testing",
    "Topic :: Utilities",
]

include = ["AUTHORS.rst", "HISTORY.rst", "Vagrantfile", "tests/**/*.py", "tests/**/*.c", "tests/**/*.yaml", "docs/source/**/*", "docs/Makefile"]

[tool.poetry.dependencies]
python = "^3.4|^2.7"
pexpect = "^4.6"
"ruamel.yaml" = "^0.15.41"
enum34 = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
pytest-cov = "^2.5"
flake8 = "^3.5"
flake8-isort = "^2.5"
flake8-docstrings = "^1.3"
sphinx = "^1.7"
sphinx_rtd_theme = "^0.4.0"
pygenstub = "^1.1"

[tool.poetry.scripts]
calico = "calico.cli:main"

[tool.black]
line-length = 96

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{37,36,35,34,27}, style, docs
skipsdist = True

[testenv]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install -v
    poetry run {posargs:pytest}

[testenv:style]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install -v
    poetry run {posargs:flake8} calico

[testenv:docs]
whitelist_externals = poetry
skip_install = true
changedir = docs/
commands =
    poetry install -v
    poetry run sphinx-build -b html source/ build/
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
