[tool.poetry]
name = "calico"
version = "1.1.2"
description = "I/O checker for command line programs."
readme = "README.rst"

authors = ["H. Turgut Uyar <uyar@itu.edu.tr>"]
license = "GPL-3.0+"

homepage = "https://github.com/itublg/calico"
documentation = "https://calico.readthedocs.io/"
repository = "https://github.com/itublg/calico"

keywords = ["testing", "i/o"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 2.7",
    "Topic :: Education :: Testing",
    "Topic :: Utilities",
]

include = [
    "AUTHORS.rst",
    "HISTORY.rst",
    "Vagrantfile",
    "tests/**/*.py",
    "tests/**/*.c",
    "tests/**/*.yaml",
    "docs/source/**/*",
    "docs/Makefile"
]

[tool.poetry.dependencies]
python = "^3.5|^2.7"
pexpect = "^4.6"
"ruamel.yaml" = "^0.15.41"
enum34 = {version = "^1.1", python = "^2.7"}

[tool.poetry.dev-dependencies]
pytest = "^3.5"
pytest-cov = "^2.5"
flake8 = "^3.5"
flake8-isort = "^2.5"
flake8-docstrings = "^1.3"
sphinx = "^1.7"
sphinx_rtd_theme = "^0.4.0"
pygenstub = "^1.1"

[tool.poetry.scripts]
calico = "calico.cli:main"

[tool.black]
line-length = 96

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{37,36,35,27}, style, docs
isolated_build = True

[testenv]
deps =
    pytest~=3.5
commands =
    pytest {posargs:tests}

[testenv:style]
basepython = python3.7
deps =
    flake8~=3.7
    flake8-isort~=2.7
    flake8-docstrings~=1.3
commands =
    flake8 calico

[testenv:docs]
basepython = python3.7
deps =
    sphinx~=2.2
    sphinx_rtd_theme~=0.4
    pygenstub~=1.4
changedir = docs/
commands =
    sphinx-build -b html source/ build/html/
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
